web-apps/jovies/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jovies
  labels:
    app: jovies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jovies
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: jovies
    spec:
      containers:
      - name: jovies
        image: ghcr.io/mayne0213/jovies:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            memory: 40Mi
            cpu: 5m
          limits:
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
      restartPolicy: Always
