web-apps/jovies/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jovies
  labels:
    app: jovies
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: jovies
