web-apps/jovies/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jovies-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - jovies.kro.kr
    - www.jovies.kro.kr
    secretName: jovies-tls
  rules:
  - host: jovies.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jovies
            port:
              number: 80
  - host: www.jovies.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jovies
            port:
              number: 80
